Configure project settings

--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
-  "name": "my-v0-project",
+  "name": "share-insts",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "build": "next build",
     "dev": "next dev",
-    "lint": "next lint",
+    "lint": "biome lint",
+    "format": "biome format --write",
+    "check": "biome check",
     "start": "next start"
   },
   "dependencies": {
@@ -60,6 +62,7 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@biomejs/biome": "2.1.2",
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
