Access to Firestore in user page
Instrument data is still dummy

--- a/biome.json
+++ b/biome.json
@@ -14,7 +14,8 @@
 			"hooks/**/*",
 			"lib/**/*",
 			"styles/**/*",
-			"stores/**/*"
+			"stores/**/*",
+			"utils/**/*"
 		]
 	},
 	"formatter": {
