Add load and save functinos for some instrument file format

--- a/biome.json
+++ b/biome.json
@@ -15,7 +15,8 @@
 			"lib/**/*",
 			"styles/**/*",
 			"stores/**/*",
-			"utils/**/*"
+			"utils/**/*",
+			"features/**/*"
 		]
 	},
 	"formatter": {
