--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "lint": "biome lint",
     "format": "biome format --write",
     "check": "biome check",
-    "start": "next start"
+    "start": "next start",
+    "test": "vitest"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
@@ -45,8 +46,8 @@
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
-    "geist": "^1.3.1",
     "firebase": "^12.0.0",
+    "geist": "^1.3.1",
     "immer": "^10.1.1",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
@@ -68,11 +69,17 @@
   },
   "devDependencies": {
     "@biomejs/biome": "2.1.2",
+    "@testing-library/dom": "10.4.1",
+    "@testing-library/react": "16.3.0",
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@vitejs/plugin-react": "4.7.0",
+    "jsdom": "26.1.0",
     "postcss": "^8.5",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vite-tsconfig-paths": "5.1.4",
+    "vitest": "3.2.4"
   }
 }
