Add FMP7 parser/stringifier

--- a/biome.json
+++ b/biome.json
@@ -16,7 +16,8 @@
 			"styles/**/*",
 			"stores/**/*",
 			"utils/**/*",
-			"features/**/*"
+			"features/**/*",
+			"!features/instrument/format/**/grammar.cjs"
 		]
 	},
 	"formatter": {
