--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "format": "biome format --write",
     "check": "biome check",
     "start": "next start",
-    "test": "vitest"
+    "test": "vitest",
+    "nearleyc": "nearleyc"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
@@ -51,6 +52,8 @@
     "immer": "^10.1.1",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
+    "moo": "^0.5.2",
+    "nearley": "^2.20.1",
     "next": "15.2.4",
     "next-themes": "^0.4.4",
     "react": "^19",
@@ -71,6 +74,7 @@
     "@biomejs/biome": "2.1.2",
     "@testing-library/dom": "10.4.1",
     "@testing-library/react": "16.3.0",
+    "@types/nearley": "^2.11.5",
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
