Split context and feature in synth

--- a/biome.json
+++ b/biome.json
@@ -11,6 +11,7 @@
       "app/**/*",
       "components/**/*",
       "!components/ui/**/*",
+      "contexts/**/*",
       "hooks/**/*",
       "lib/**/*",
       "styles/**/*",
