Load WASM in Web Worker

--- a/biome.json
+++ b/biome.json
@@ -14,8 +14,11 @@
       "contexts/**/*",
       "hooks/**/*",
       "lib/**/*",
+      "public/worker/**/*",
+      "public/worklet/**/*",
       "styles/**/*",
       "stores/**/*",
+      "types/**/*",
       "utils/**/*",
       "features/**/*",
       "!features/instrument/format/**/grammar.cjs"
